2.1.2-beta:
- AKAStacks fixed a problem with breaking facades causing the network to unlink

2.1.1-beta:
- Dependency fix

2.1.0-beta:
- Fixed antenna models
- Re-implemented TOP support for all XNet cables/connectors and machines
- Used new tooltip system in McJtyLib
- The oredictionary support in XNet has been replaced with the use of tags. If you enable 'tag matching' it tries to find common tags to match on
- XNet now also supports the filter module from RFToolsBase. Up to 4 filters can be placed in the controller and used in item connectors
- The processor console module can now also be used as an item in the tablet
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

2.0.2-alpha:
- Darkere fixed some GUI translation keys
- 'kr' translation file from Mindy
- Fixed the models for the router and wireless router
- Fixed various cable models

2.0.1-alpha:
- Fixed proper dependency reporting in case McJtyLib or RFToolsBase are missing

1.8.7:
- Inventory hilighting from the controller works again
- The facade block works much better now
- Connectors now connect better (visually) when they are first placed

1.8.6:
- Updates to latest McJtyLib
- The drops for cables, connectors and advanced connectors should now be correct
- The xnet cables and connectors should no longer appear in all creative tabs

1.8.5:
- Fixed localized names for the colored cables, connectors, and advanced connectors
- Fixed a problem in the controller where the current amount of power would not be shown correctly

1.8.4:
- Fixed class loading problem on servers
- Improved crafting recipes for cables, connectors and advanced connectors by using tags

1.8.3:
- First port to 1.14

1.8.2:
- Joseph fixed a pathological case with fluid handling

1.8.1:
- The ctrl-c/ctrl-v hotkeys work on connectors now instead of channels
- The up/down keys move up/down the selected connector

1.8.0: