@@ -13,7 +13,7 @@
       "tag": "forge:dyes/yellow"
     },
     "C": {
-      "item": "minecraft:chest"
+      "tag": "forge:chests"
     },
     "r": {
       "item": "minecraft:redstone"
